# PyWENO

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README  README.md  cache.py  codegen.html  documentation.html  download.html  examples.html  genindex.html  index.html  meson.build  modindex.html  nonuniform.html  notation.html  objects.inv  opencl.html  profile-cstensil.py  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py  smoothness.html  symbolic.html  test-cstencil.py  test.py  tutorial.html  version.py  weno.html  whatsnew.html
_downloads/: smooth.py
_sources/: codegen.txt  examples.txt  index.txt  nonuniform.txt  opencl.txt  reference.txt  symbolic.txt  tutorial.txt  whatsnew.txt
docs/: Makefile  codegen.rst  conf.py  documentation.rst  download.rst  examples.old  examples.rst  index.rst  nonuniform.rst  notation.rst  opencl.rst  reference.rst  smoothness.rst  symbolic.rst  tutorial.rst  weno.rst  weno.tex  whatsnew.rst
examples/: cache.py  clweno5.py  discontinuous.py  smooth.py  step.py  timings.py  uniform_discontinuous.py
images/: smooth.py
profile/: Makefile  NOTES  main.c  profile.py  reconstruct.py
pyweno/: __init__.py  c.py  clweno.py  clweno5.py  code.py  codegen.py  codeprinters.py  f.py  functions.py  grid.py  jiang_shu.pkl  kernels.py  nonuniform.py  nonuniform_codegen.py  nonuniform_weno_3.f90  nonuniform_weno_5.f90  opencl.py  points.py  poly.py  reconstruction_coeffs.py  smoothness.py  stencil.py  symbolic.py  symbols.py  templates.py  version.py  weno.py  weno_5.f90  wrappers.py
scikits/weno/: __init__.py  reconstruction_coeffs.py  weno.py
scratch/: test-clweno.py  test-clweno5.py
sources/: documentation.txt  download.txt  examples.txt  index.txt  smoothness.txt  weno.txt
src/: ccoeffs.c  coeffs003.c  coeffs004.c  coeffs005.c  coeffs006.c  coeffs007.c  coeffs008.c  coeffs009.c  csmoothness.c  cstencil.c  cstencil.py  cweno.c  generate.py  generate_coeffs.py  generate_weno.py  nfweno.c  nfweno.h  nonuniform.f90  poly.c  reconstruction_coeffs_k3_d0.c  reconstruction_coeffs_k3_d1.c  reconstruction_coeffs_k3_d2.c  reconstruction_coeffs_k4_d0.c  reconstruction_coeffs_k4_d1.c  reconstruction_coeffs_k4_d2.c  reconstruction_coeffs_k5_d0.c  reconstruction_coeffs_k5_d1.c  reconstruction_coeffs_k5_d2.c  reconstruction_coeffs_k6_d0.c  reconstruction_coeffs_k6_d1.c  reconstruction_coeffs_k6_d2.c  reconstruction_coeffs_k7_d0.c  reconstruction_coeffs_k7_d1.c  reconstruction_coeffs_k7_d2.c  reconstruction_coeffs_k8_d0.c  reconstruction_coeffs_k8_d1.c  reconstruction_coeffs_k8_d2.c  reconstruction_coeffs_k9_d0.c  reconstruction_coeffs_k9_d1.c  weno_gauss_legendre003002.c  (+90 more)
tests/: test-biasedweno.py  test-clweno.py  test-cnonuniform.py  test-functions.py  test-grid.py  test-kernels.py  test-nonuniform-codegen.py  test-nonuniform.py  test-scikit.py  test-smoothness.py  test-stencil.py  test-weno.py  test-wrappers.py
